--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 	<h1>Sliding Tile Puzzle</h1>
 
-	<ul id="game"></ul>
+	<div class="stats">
+		<div>Game: <span id="game"></span></div>
+		<div>Turn: <span id="turn"></span></div>
+		<div>Average turns per game: <span id="avg"></span></div>
+	</div>
 
 	<div id="puzzle"></div>
 	<script type="module" src="script.js"></script>
