--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 	<h1>Sliding Tile Puzzle</h1>
 
+	<div class="controls">
+		<button id="resetStats">Reset stats</button>
+		<button id="restart">Restart</button>
+	</div>
+
 	<div class="stats">
 		<div>Game: <span id="game"></span></div>
 		<div>Turn: <span id="turn"></span></div>
